# slm-desktop

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  FastMain.qml  Main.qml  appmodel.cpp  appmodel.h  dbuslogutils.h  dockidentity.h  externalindicatorregistry.cpp  filemanagerapi.h  filemanagermodel.h  filemanagermodelfactory.h  globalmenumanager.cpp  globalmenumanager.h  globalsearchservice.cpp  globalsearchservice.h  main.cpp  metadataindexserver.cpp  portaluibridge.cpp  shortcutmodel.cpp  shortcutmodel.h  tothespotcontextmenuhelper.cpp  tothespotservice.cpp  tothespotservice.h  tothespottexthighlighter.h  uipreference_cli.cpp
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  pull_request_template.md
Qml/: AppDeckController.qml  BadgeService.qml  DesktopScene.qml  DockController.qml  DockSystem.qml  IndicatorRegistry.qml  MotionController.qml  ShellState.qml  ShellZOrder.qml  Theme.qml  TopBarPopupController.qml
Style/: AppDialog.qml  AppPopup.qml  Breadcrumb.qml  Button.qml  CheckBox.qml  ComboBox.qml  Dialog.qml  DialogButtonBox.qml  IndicatorMenu.qml  IndicatorSectionLabel.qml  IndicatorSectionRow.qml  Label.qml  Menu.qml  MenuItem.qml  MenuSeparator.qml  Popup.qml  PopupSurface.qml  ProgressBar.qml  RadioButton.qml  ScrollBar.qml  Slider.qml  SpinBox.qml  Switch.qml  TabBar.qml  TabButton.qml  TextField.qml  ToolButton.qml  ToolTip.qml  WindowDialogSurface.qml  qmldir
cmake/: FindSlmFileManager.cmake  Sources.cmake  StructureGuard.cmake
compositor/: README.md  meson.build  run-nested.sh
dev/: dev-rebuild.sh  qemu-bootstrap-remote.sh  qemu-build-remote.sh  qemu-create-disk.sh  qemu-guest-bootstrap.sh  qemu-guest-build.sh  qemu-guest-session-smoke.sh  qemu-install-deps-remote.sh  qemu-login-smoke-pipeline.sh  qemu-run.sh  qemu-scp.sh  qemu-session-smoke-remote.sh  qemu-smoke.sh  qemu-ssh.sh  run-dev.sh  workspace.env
docs/: APPDECK.md  APPDECK_REDESIGN.md  ARCHITECTURE.md  BRANDING_GLOSSARY.md  CI_TIER_MAP.md  COMPATIBILITY_RUNTIME_POLICY.md  DBUS_API_CHANGELOG.md  DEPENDENCIES.md  DESKTOP_DAEMON_ARCHITECTURE.md  DESKTOP_VIEW_TEST_CHECKLIST.md  DOCK_STRUCTURE_GUIDE.md  ENVD_ARCHITECTURE.md  ENVD_ROADMAP.md  ENVD_UXUI.md  FILEMANAGER_INTEGRATION.md  GREETER_TO_DESKTOP_TEST_ARCHITECTURE.md  INTEGRATION.md  LOGIN_SPLIT_PREP.md  MODULAR_STRUCTURE.md  PORTAL.md  PRINT_SYSTEM_ROADMAP.md  PRIVILEGED_ACCESS_BACKEND.md  PRIVILEGED_ACCESS_UX.md  PROJECT_STRUCTURE.md  QEMU_DEV.md  README.md  REGRESSION_CHECKLIST.md  RELEASE_COMPATIBILITY_MATRIX.md  RELEASE_PLAN.md  REPO_SPLIT_PLAN.md  RUN_MODES.md  SDDM_THEME.md  SESSION_STATE.md  SETTINGS_APP_ARCHITECTURE.md  SHARING_ARCHITECTURE.md  SLM_INSTALLER.md  SLM_INSTALLER_BACKEND.md  SLM_INSTALLER_DESIGN.md  STYLE_GUIDE.md  TODO.md  (+9 more)
modules/slm-filemanager/: CMakeLists.txt  MILESTONES.md  README.md  ROADMAP.md
modules/slm-filemanager/.github/ISSUE_TEMPLATE/: config.yml  m1_stabilize.md  m2_integration_pinning.md  m4_hardening.md  m5_deprecation_cleanup.md
modules/slm-filemanager/.github/workflows/: ci.yml
modules/slm-filemanager/cmake/: SlmFileManagerConfig.cmake.in  Sources.cmake
modules/slm-filemanager/docs/: EXTRACTION_PATHS.txt  MIGRATION.md
modules/slm-filemanager/scripts/: ci-smoke.sh
modules/slm-filemanager/src/core/: README.md
modules/slm-filemanager/src/daemon/: README.md
modules/slm-filemanager/src/qml/: README.md
modules/slm-filemanager/tests/: CMakeLists.txt
scripts/: bootstrap-external-filemanager-package.sh  build-filemanager-profile.sh  build-filemanager-standalone-staging.sh  check-animation-token-usage.sh  check-capability-matrix.sh  check-crown-popup-contract.sh  check-cups-leakage.py  check-filemanager-extraction-gate.sh  check-filemanager-split-readiness.sh  check-integration-contracts.sh  (+52 more)
src/installer/: CMakeLists.txt  README.md  settings.conf
src/installer/branding/slm/: branding.desc  show.qml
src/installer/calamares-modules/: CMakeLists.txt
src/installer/calamares-modules/slm-bootloader/: CMakeLists.txt  SlmBootloaderJob.cpp  SlmBootloaderJob.h
src/installer/calamares-modules/slm-btrfs-layout/: CMakeLists.txt  SlmBtrfsLayoutJob.cpp  SlmBtrfsLayoutJob.h  slm-btrfs-layout.conf
src/installer/calamares-modules/slm-deploy/: CMakeLists.txt  SlmDeployJob.cpp  SlmDeployJob.h
src/installer/calamares-modules/slm-firstboot/: CMakeLists.txt  SlmFirstbootJob.cpp  SlmFirstbootJob.h
src/installer/calamares-modules/slm-fstab/: CMakeLists.txt  SlmFstabJob.cpp  SlmFstabJob.h  slm-fstab.conf
src/installer/calamares-modules/slm-hardware-probe/: CMakeLists.txt  SlmHardwareProbeJob.cpp  SlmHardwareProbeJob.h
src/installer/calamares-modules/slm-partition/: CMakeLists.txt  SlmPartitionJob.cpp  SlmPartitionJob.h  slm-partition.conf
src/installer/calamares-modules/slm-protected-packages/: CMakeLists.txt  SlmProtectedPackagesJob.cpp  SlmProtectedPackagesJob.h
src/installer/calamares-modules/slm-recovery/: CMakeLists.txt  SlmRecoveryJob.cpp  SlmRecoveryJob.h
src/installer/calamares-modules/slm-snapshot/: CMakeLists.txt  SlmSnapshotJob.cpp  SlmSnapshotJob.h
src/installer/calamares-modules/slm-uefi-check/: CMakeLists.txt  SlmUefiCheckJob.cpp  SlmUefiCheckJob.h
src/installer/dev-harness/: CMakeLists.txt  disk-select-harness.qml  harness-main.cpp  resources.qrc  summary-harness.qml  welcome-harness.qml
src/installer/qml-components/: DiskSelectionScreen.qml  InstallerCard.qml  InstallerDiskCard.qml  InstallerPrimaryButton.qml  InstallerTheme.qml  PartitionDiagram.qml  SummaryScreen.qml  WelcomeScreen.qml  qmldir
src/installer/shared/: SlmCommand.cpp  SlmCommand.h  SlmErrorTranslator.cpp  SlmErrorTranslator.h
src/installer/viewmodels/: CMakeLists.txt  SlmInstallerDiskModel.cpp  SlmInstallerDiskModel.h
src/installer/viewmodules/: CMakeLists.txt
src/installer/viewmodules/disk-select/: CMakeLists.txt  Config.cpp  Config.h  SlmDiskSelectViewStep.cpp  SlmDiskSelectViewStep.h  disk-select.qml  resources.qrc
src/installer/viewmodules/summary/: CMakeLists.txt  Config.cpp  Config.h  SlmSummaryViewStep.cpp  SlmSummaryViewStep.h  resources.qrc  summary.qml
(+1564 files in other folders)
